--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=ApplicationDb;User Id=sa;Password=Test@123;TrustServerCertificate=True"
+    "DefaultConnection": ""
   }
 }
+
